@@ -76,6 +76,7 @@ The following people are not part of the development team, but have been contrib
 * Nicolas Hawrysh (xp4xbox) - Various (ride) sprite improvements.
 * Albert Morgese (Fusxfaranto) - Shop auto-rotation, unicode uppercasing.
 * Olivier Wervers (oli414) - Remove unused objects command, various bugfixes
+* (qqkookie) - Slow game speed.
 
 ## Bug fixes
 * (halfbro)
