@@ -4568,6 +4568,8 @@ STR_6258    :Clear (transparent)
 STR_6259    :Disabled
 STR_6260    :Show blocked tiles
 STR_6261    :Show wide paths
+STR_6262    :Slow Speed
+STR_6263    :Slower Speed
 
 #############
 # Scenarios #
