@@ -884,13 +884,27 @@ static void window_top_toolbar_paint(rct_window* w, rct_drawpixelinfo* dpi)
         imgId = SPR_G2_FASTFORWARD;
         gfx_draw_sprite(dpi, imgId, x + 6, y + 3, 0);
 
-        for (int32_t i = 0; i < gGameSpeed && gGameSpeed <= 4; i++)
+        if (gGameSpeed == GAMESPEED_SLOW)
         {
-            gfx_draw_sprite(dpi, SPR_G2_SPEED_ARROW, x + 5 + i * 5, y + 15, 0);
+            gfx_draw_sprite(dpi, SPR_G2_RCT1_TEST_BUTTON_2, x+3 , y + 12, 0);
         }
-        for (int32_t i = 0; i < 3 && i < gGameSpeed - 4 && gGameSpeed >= 5; i++)
+        else if (gGameSpeed == GAMESPEED_PAUSED)
         {
-            gfx_draw_sprite(dpi, SPR_G2_HYPER_ARROW, x + 5 + i * 6, y + 15, 0);
+            gfx_draw_sprite(dpi, SPR_G2_RCT1_CLOSE_BUTTON_2, x+3 , y + 12, 0);
+        }
+        else if (gGameSpeed == GAMESPEED_HYPER)
+        {
+            for (int32_t i = 0; i < 3; i++) 
+			{
+                gfx_draw_sprite(dpi, SPR_G2_HYPER_ARROW, x + 5 + i * 5, y + 15, 0);
+            }
+        }
+        else 
+		{
+            for (int32_t i = 0; i <= gGameSpeed - GAMESPEED_NORMAL; i++)
+			{
+                gfx_draw_sprite(dpi, SPR_G2_SPEED_ARROW, x + 5 + i * 5, y + 15, 0);
+            }
         }
     }
 
@@ -3061,63 +3075,40 @@ static void window_top_toolbar_tool_abort(rct_window* w, rct_widgetindex widgetI
 
 static void top_toolbar_init_fastforward_menu(rct_window* w, rct_widget* widget)
 {
-    int32_t num_items = 4;
-    gDropdownItemsFormat[0] = STR_TOGGLE_OPTION;
-    gDropdownItemsFormat[1] = STR_TOGGLE_OPTION;
-    gDropdownItemsFormat[2] = STR_TOGGLE_OPTION;
-    gDropdownItemsFormat[3] = STR_TOGGLE_OPTION;
+    int32_t num_menu;
+    extern const rct_string_id SpeedNames[];
+
+    for (num_menu = 0; num_menu < GAMESPEED_TURBO; num_menu++)
+    {
+        gDropdownItemsFormat[num_menu] = STR_TOGGLE_OPTION;
+        gDropdownItemsArgs[num_menu] = SpeedNames[num_menu];
+    }
     if (gConfigGeneral.debugging_tools)
     {
-        gDropdownItemsFormat[4] = STR_EMPTY;
-        gDropdownItemsFormat[5] = STR_TOGGLE_OPTION;
-        gDropdownItemsArgs[5] = STR_SPEED_HYPER;
-        num_items = 6;
+        gDropdownItemsFormat[num_menu] = STR_EMPTY;
+        num_menu++;
+        gDropdownItemsFormat[num_menu] = STR_TOGGLE_OPTION;
+        gDropdownItemsArgs[num_menu] = STR_SPEED_HYPER;
+        num_menu++;
     }
-
-    gDropdownItemsArgs[0] = STR_SPEED_NORMAL;
-    gDropdownItemsArgs[1] = STR_SPEED_QUICK;
-    gDropdownItemsArgs[2] = STR_SPEED_FAST;
-    gDropdownItemsArgs[3] = STR_SPEED_TURBO;
 
     window_dropdown_show_text(
-        w->x + widget->left, w->y + widget->top, widget->bottom - widget->top + 1, w->colours[0] | 0x80, 0, num_items);
+        w->x + widget->left, w->y + widget->top, widget->bottom - widget->top + 1, w->colours[0] | 0x80, 0, num_menu);
 
     // Set checkmarks
-    if (gGameSpeed <= 4)
-    {
-        dropdown_set_checked(gGameSpeed - 1, true);
-    }
-    if (gGameSpeed == 8)
-    {
-        dropdown_set_checked(5, true);
-    }
-
-    if (gConfigGeneral.debugging_tools)
-    {
-        gDropdownDefaultIndex = (gGameSpeed == 8 ? 0 : gGameSpeed);
-    }
-    else
-    {
-        gDropdownDefaultIndex = (gGameSpeed >= 4 ? 0 : gGameSpeed);
-    }
-    if (gDropdownDefaultIndex == 4)
-    {
-        gDropdownDefaultIndex = 5;
-    }
+    gDropdownDefaultIndex = gGameSpeed - 1;
+    if (gConfigGeneral.debugging_tools && gGameSpeed == GAMESPEED_HYPER)
+        gDropdownDefaultIndex++;
+    dropdown_set_checked(gDropdownDefaultIndex, true);
 }
 
 static void top_toolbar_fastforward_menu_dropdown(int16_t dropdownIndex)
 {
     rct_window* w = window_get_main();
-    if (w)
+    if (w && dropdownIndex >= 0 && dropdownIndex <= 6)
     {
-        if (dropdownIndex >= 0 && dropdownIndex <= 5)
-        {
-            gGameSpeed = dropdownIndex + 1;
-            if (gGameSpeed >= 5)
-                gGameSpeed = 8;
+        gGameSpeed = (dropdownIndex == 6) ? GAMESPEED_HYPER : (dropdownIndex + 1);
             window_invalidate(w);
-        }
     }
 }
 
