@@ -67,7 +67,7 @@
 
 uint16_t gTicksSinceLastUpdate;
 uint8_t gGamePaused = 0;
-int32_t gGameSpeed = 1;
+int32_t gGameSpeed = GAMESPEED_NORMAL;     // initial, normal speed ;
 float gDayNightCycle = 0;
 bool gInUpdateCode = false;
 bool gInMapInitCode = false;
@@ -129,17 +129,21 @@ GAME_COMMAND_CALLBACK_POINTER* game_command_callback_get_callback(uint32_t index
 
 void game_increase_game_speed()
 {
-    gGameSpeed = std::min(gConfigGeneral.debugging_tools ? 5 : 4, gGameSpeed + 1);
-    if (gGameSpeed == 5)
-        gGameSpeed = 8;
+    if (gGameSpeed < (gConfigGeneral.debugging_tools ? GAMESPEED_HYPER : GAMESPEED_TURBO))
+        gGameSpeed++;
+
+    if (game_is_paused())
+        pause_toggle();
     window_invalidate_by_class(WC_TOP_TOOLBAR);
 }
 
 void game_reduce_game_speed()
 {
-    gGameSpeed = std::max(1, gGameSpeed - 1);
-    if (gGameSpeed == 7)
-        gGameSpeed = 4;
+    if (gGameSpeed > GAMESPEED_PAUSED)
+        gGameSpeed--;
+
+    if (gGameSpeed == GAMESPEED_PAUSED && game_is_not_paused() )
+        pause_toggle();
     window_invalidate_by_class(WC_TOP_TOOLBAR);
 }
 
@@ -822,6 +826,10 @@ void pause_toggle()
     {
         audio_stop_all_music_and_sounds();
     }
+    else if (gGameSpeed == GAMESPEED_PAUSED)
+    {
+        gGameSpeed = GAMESPEED_NORMAL;
+    }
 }
 
 bool game_is_paused()
@@ -1147,7 +1155,7 @@ void game_load_init()
     }
 
     audio_stop_title_music();
-    gGameSpeed = 1;
+    gGameSpeed = GAMESPEED_NORMAL;
 }
 
 /**
