@@ -5,6 +5,7 @@
 - Feature: [#7694] Debug option to visualize paths that the game detects as wide.
 - Feature: [#7771] Danish translation.
 - Feature: [#7797, #7802, #7821] Add sprite font glyphs for Danish, Norwegian, Russian, Turkish and Catalan.
+- Feature: [#7809] Slow speed step.
 - Fix: [#3177] Wrong keys displayed in shortcut menu.
 - Fix: [#4039] No sprite font glyph for German opening quotation mark.
 - Fix: [#7533] Screenshot is incorrectly named/file is not generated in CJK language.
